--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,85 +1,98 @@
 <!DOCTYPE html>
-<!-- saved from url=(0040)https://getbootstrap.com/examples/cover/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="A free, customizable, and open source breaking news notification service.">
-    <meta name="author" content="Miles McCain">
-    <link rel="icon" href="assets/favicon.png">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>LibreNews — free, customizable, and decentralized breaking news notifications</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/bootstrap.min.css" rel="stylesheet">
+  <meta name="description" content="A free, customizable, and open source breaking news notification service.">
+  <meta name="author" content="Miles McCain">
+  <link rel="icon" href="assets/favicon.png">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="static/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <title>LibreNews — free, customizable, and decentralized breaking news notifications</title>
 
-    <!-- Custom styles for this template -->
-    <link href="static/cover.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="static/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="static/ie-emulation-modes-warning.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="static/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <!-- Custom styles for this template -->
+  <link href="static/cover.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="static/ie-emulation-modes-warning.js"></script>
+
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="site-wrapper">
+  <div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+    <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+      <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="/api">API</a></li>
-                  <li><a href="https://getbootstrap.com/examples/cover/#">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
+        <div class="masthead clearfix">
+          <div class="inner">
+            <h3 class="masthead-brand">LibreNews</h3>
+            <nav>
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="/api">API</a></li>
+                <li><a href="https://github.com/milesmcc/LibreNews-Server/blob/master/README.md">Documentation</a></li>
+              </ul>
+            </nav>
           </div>
+        </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="https://getbootstrap.com/examples/cover/#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+        <div class="inner cover">
+          <h1 class="cover-heading">LibreNews</h1>
+          <p class="lead">A free, open source, speedy, and deeply customizable breaking news notification system.</p>
+          <p class="lead">
+            <a href="#" class="btn btn-lg btn-default" disabled>iOS</a> <a href="#" class="btn btn-lg btn-default" disabled>Android</a>
+          </p>
+          <br><br>
+          <div class="flash">
+            <a href="{{flash['link']}}">
+              <p class="lead" style="font-family: monospace;"><small><i class="fa fa-circle text-danger Blink">&nbsp;&nbsp;</i>{{time}}</small></p>
+              <p class="lead"><strong>{{flash['text']}}</strong></p>
+              <p class="lead" style="font-family: monospace;"><small><i>via {{flash['source']}}</i></small></p>
+            </a>
           </div>
+        </div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
+        <div class="mastfoot">
+          <div class="inner">
+            <p>LibreNews is <a href="https://github.com/milesmcc/LibreNews-Server">open source</a>. Made by <a href="https://rmrm.io">Miles McCain</a>.</p>
           </div>
-
         </div>
 
       </div>
 
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="static/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="static/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="static/ie10-viewport-bug-workaround.js"></script>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <!-- <script src="static/bootstrap.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script> -->
+  <script src="static/ie10-viewport-bug-workaround.js"></script>
 
 
-</body></html>
+</body>
+
+</html>
