Fix page, fix returns, ready to go

--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -58,8 +58,9 @@
         <div class="inner cover">
           <h1 class="cover-heading">LibreNews Stats</h1>
           <p class="lead">General aggregated statistics from the devices that have connected to this LibreNews server.</p>
+          <hr>
           <p class="lead">
-            This server restarted <span style="font-family: monospace;">{{last_restart}}</span>. Since then, it has seen the following:
+            This server restarted <span style="font-family: monospace;">{{last_restart}}</span>. Since then:
           </p>
           <br><br>
           <div class="row">
