Update links, add reference to privacy policy

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,7 +46,7 @@
             <h3 class="masthead-brand">LibreNews</h3>
             <nav>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li><a href="/api">API</a></li>
                 <li><a href="https://github.com/milesmcc/LibreNews-Server/blob/master/README.md">Documentation</a></li>
                 <li><a href="/stats">Stats</a></li>
@@ -74,6 +74,7 @@
         <div class="mastfoot">
           <div class="inner">
             <p>LibreNews is <a href="https://github.com/milesmcc/LibreNews-Server">open source</a>. Made by <a href="https://rmrm.io">Miles McCain</a>.</p>
+            <p>We're proud not to <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/STOPTRACKING.md">track</a> you, but we have a <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/PRIVACY.md">privacy policy</a> regardless.</p>
           </div>
         </div>
 
