--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -46,7 +46,7 @@
             <h3 class="masthead-brand">LibreNews</h3>
             <nav>
               <ul class="nav masthead-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/api">API</a></li>
                 <li><a href="https://github.com/milesmcc/LibreNews-Server/blob/master/README.md">Documentation</a></li>
                 <li class="active"><a href="/stats">Stats</a></li>
