--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,7 +59,7 @@
           <h1 class="cover-heading">LibreNews</h1>
           <p class="lead">A free, open source, speedy, and deeply customizable breaking news notification system.</p>
           <p class="lead">
-            <a href="#" class="btn btn-lg btn-default" disabled>iOS</a> <a href="https://play.google.com/store/apps/details?id=app.librenews.io.librenews" class="btn btn-lg btn-default" disabled>Android</a>
+            <a href="#" class="btn btn-lg btn-default" disabled>iOS</a> <a href="https://play.google.com/store/apps/details?id=app.librenews.io.librenews" class="btn btn-lg btn-default">Android</a>
           </p>
           <br><br>
           <div class="flash">
