--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -81,6 +81,7 @@
         <div class="mastfoot">
           <div class="inner">
             <p>LibreNews is <a href="https://github.com/milesmcc/LibreNews-Server">open source</a>. Made by <a href="https://rmrm.io">Miles McCain</a>.</p>
+            <p>We're proud not to <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/STOPTRACKING.md">track</a> you, but we have a <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/PRIVACY.md">privacy policy</a> regardless.</p>
           </div>
         </div>
 
