--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -65,7 +65,7 @@
           <br><br>
           <div class="row">
             <div class="col-md-4">
-              Estimated devices<br>
+              Estimated devices (by IP)<br>
               <span style="font-family: monospace;">{{devices}}</span>
             </div>
             <div class="col-md-4">
@@ -76,23 +76,29 @@
               Requests per second<br>
               <span style="font-family: monospace;">{{requests_per_second}}</span>
             </div>
-        </div>
-
-        <div class="mastfoot">
-          <div class="inner">
-            <p>LibreNews is <a href="https://github.com/milesmcc/LibreNews-Server">open source</a>. Made by <a href="https://rmrm.io">Miles McCain</a>.</p>
-            <p>We're proud not to <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/STOPTRACKING.md">track</a> you, but we have a <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/PRIVACY.md">privacy policy</a> regardless.</p>
           </div>
+          <br><br>
+          Top countries<br>
+          <div class="row">
+            {% for country_data in countries %}
+              <strong>{{country_data[0]}}</strong> &mdash; <span style="font-family: monospace;">{{country_data[1]}}</span>
+            {% end %}
+          </div>
+          <div class="mastfoot">
+            <div class="inner">
+              <p>LibreNews is <a href="https://github.com/milesmcc/LibreNews-Server">open source</a>. Made by <a href="https://rmrm.io">Miles McCain</a>.</p>
+              <p>We're proud not to <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/STOPTRACKING.md">track</a> you, but we have a <a href="https://github.com/milesmcc/LibreNews-Android/blob/master/PRIVACY.md">privacy policy</a> regardless.</p>
+            </div>
+          </div>
+
         </div>
 
       </div>
 
     </div>
 
-  </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <!-- <script src="static/bootstrap.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <!-- <script src="static/bootstrap.min.js"></script>
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
