continue push development

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -57,7 +57,7 @@
             <object class="vertdots"></object>
             <section id="install">
               <p>
-                <a class="btn btn-outline-light btn-lg ibm-type-mono" id="notification-button">Turn On Notifications</a>
+                <a class="btn btn-outline-light btn-lg ibm-type-mono" id="notification-button" onclick="askNotificationPermission()">Turn On Notifications</a>
               </p>
             </section>
             <object class="vertdots"></object>
@@ -87,6 +87,7 @@
       </div>
     </div>
   </div>
+  <script src="base.js"></script>
 </body>
 
 </html>
